--- a/templates/base.html
+++ b/templates/base.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <nav class="nav">
+        {% if user.is_authenticated %}
         <a href="" class="nav-link disabled">{{user}}</a>
+        <a href="{% url 'accounts:logout' %}" class="nav-link">logout</a>
+        {% else %}
         <a href="{% url 'accounts:signup' %}" class="nav-link">signup</a>
         <a href="{% url 'accounts:login' %}" class="nav-link">login</a>
-        <a href="{% url 'accounts:logout' %}" class="nav-link">logout</a>
+        {% endif %}
     </nav>
     <div class="container">
         {% block body %}
