--- a/articles/templates/index.html
+++ b/articles/templates/index.html
@@ -7,6 +7,7 @@
         <h3>{{article.title}}</h3>
         <p>{{article.content}}</p>
         <p>{{article.user}}</p>
+        <a href="{% url 'articles:detail' article.id %}">detail</a>
         <hr>
     {% endfor %}
 {% endblock %}
