Comment delete 기능 구현

--- a/articles/templates/detail.html
+++ b/articles/templates/detail.html
@@ -14,7 +14,10 @@
 
     <hr>
     {% for comment in article.comment_set.all %}
-        <li>{{comment.user}} - {{comment.content}}</li>
+        <li>{{comment.user.username}} - {{comment.content}}</li>
+        {% if user == comment.user %}
+            <a href="{% url 'articles:comment_delete' article.id comment.id %}">delete</a>
+        {% endif %}
     {% endfor %}
 
 {% endblock %}
