Article update 기능 구현

--- a/articles/templates/detail.html
+++ b/articles/templates/detail.html
@@ -7,7 +7,7 @@
 
 
     {% if user == article.user %}
-    <a href="">update</a>
+    <a href="{% url 'articles:update' article.id %}">update</a>
     <a href="{% url 'articles:delete' article.id %}">delete</a>
     {% endif %}
 
